<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_header"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp" />

    <Button android:id="@+id/streamer" style="@style/ButtonU" android:text="@string/streamer"/>
    <Button android:id="@+id/scores" style="@style/ButtonU" android:text="@string/scores"/>
    <Button android:id="@+id/library" style="@style/ButtonU" android:text="@string/library"/>
    <Button android:id="@+id/bigger" style="@style/ButtonU" android:text="@string/bigger"/>
    <Button android:id="@+id/xyz" style="@style/ButtonU" android:text="@string/xyz"/>
    <Button android:id="@+id/capstone" style="@style/ButtonM" android:text="@string/capstone"/>

</LinearLayout>
